--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,10 @@ services:
     ports:
       - 5445:5432
     expose:
-      - 5432
+      - 5445
     volumes:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./postgres/data:/var/lib/postgresql/data
+      # - ./postgres/data:/var/lib/postgresql/data
 
   mongodb:
     container_name: mongodb
@@ -23,8 +23,10 @@ services:
     env_file:
       - .env
     ports:
-      - 27017:27017
+      - 27720:27017
     expose:
-      - 27017
+      - 27720
+    # volumes:
+    #   - ./mongodb/data:/data/db
     volumes:
-      - ./mongodb/data:/data/db
+      - ./mongo/init.js:/docker-entrypoint-initdb.d/init.js:ro
