--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-sqlalchemy
+sqlalchemy==2.0.25
 psycopg2-binary==2.9.5
+pandas==2.2.0
+python-dotenv==1.0.1
+pymongo==4.6.1
+psutil==5.9.8
+pyarrow==15.0.0
+WMI==1.5.1
